--- a/sw/xfci/libfci/Makefile
+++ b/sw/xfci/libfci/Makefile
@@ -1,5 +1,5 @@
 # =========================================================================
-#  Copyright 2018-2021 NXP
+#  Copyright 2018-2022 NXP
 #
 #  SPDX-License-Identifier: GPL-2.0
 #
@@ -45,6 +45,7 @@ INCLUDES += -I$(INC_PREFIX)src \
 			-I$(INC_PREFIX)public \
 			-I$(INC_PREFIX)../../common/public \
 			-I$(INC_PREFIX)../../hal/public \
+			-I$(INC_PREFIX)../../oal/public \
 			-I$(INC_PREFIX)../../fci/public \
 			-I$(INC_PREFIX)../../pfe_platform/public
 
