pfeng: convert oal submodule to lib build
Issue: AAVB-7589
Signed-off-by: Jan Petrous <jan.petrous@nxp.com>

--- a/sw/oal/Makefile
+++ b/sw/oal/Makefile
@@ -1,5 +1,5 @@
 # =========================================================================
-#  Copyright 2018-2022 NXP
+#  Copyright 2018-2023 NXP
 #
 #  SPDX-License-Identifier: GPL-2.0
 #
@@ -9,11 +9,7 @@ ifndef KERNELRELEASE
 include ../build_env.mak
 endif
 
-ifeq ($(TARGET_OS),LINUX)
-  ARTIFACT = oal.o
-else
-  ARTIFACT = oal.a
-endif
+ARTIFACT = oal.a
 
 TARGET = $(OUTPUT_DIR)/$(ARTIFACT)
 
@@ -112,18 +108,4 @@ rebuild: clean all
 #
 # Linux build
 
-ccflags-y += $(INCLUDES)
-ccflags-y += $(CCFLAGS_pfe)
-ccflags-y += $(GLOBAL_CCFLAGS)
-ccflags-y += -Werror
-
-oal-y := $(OBJS)
-
-obj-m += oal.o
-
-linux:
-	make CROSS_COMPILE=$(PLATFORM)-  ARCH=$(ARCH) -C $(KERNELDIR) M=`pwd` GLOBAL_CCFLAGS="$(GLOBAL_CCFLAGS)" modules
-
-linux-clean:
-	make CROSS_COMPILE=$(PLATFORM)-  ARCH=$(ARCH) -C $(KERNELDIR) M=`pwd` clean
-
+include $(M)/../dummy_mod.mak
