pfeng: convert fifo submodule to lib build
Issue: AAVB-7589
Signed-off-by: Jan Petrous <jan.petrous@nxp.com>

--- a/sw/fifo/Makefile
+++ b/sw/fifo/Makefile
@@ -1,5 +1,5 @@
 # =========================================================================
-#  Copyright 2018-2022 NXP
+#  Copyright 2018-2023 NXP
 #
 #  SPDX-License-Identifier: GPL-2.0
 #
@@ -9,11 +9,7 @@ ifndef KERNELRELEASE
 include ../build_env.mak
 endif
 
-ifeq ($(TARGET_OS),LINUX)
-  ARTIFACT = fifo.o
-else
-  ARTIFACT = fifo.a
-endif
+ARTIFACT = fifo.a
 
 TARGET = $(OUTPUT_DIR)/$(ARTIFACT)
 
@@ -54,7 +50,7 @@ DEPS = -Wp,-MMD,$(@:%.o=%.d),-MT,$@
 rwildcard = $(wildcard $(addprefix $1/*.,$2)) $(foreach d,$(wildcard $1/*),$(call rwildcard,$d,$2))
 
 #Source list
-SRCS = $(call rwildcard, src, c)
+SRCS = src/fifo.c
 
 #Object files list
 OBJS = $(addprefix $(OUTPUT_DIR)/,$(addsuffix .o, $(basename $(SRCS))))
@@ -93,19 +89,4 @@ rebuild: clean all
 #
 # Linux build
 
-ccflags-y += $(INCLUDES)
-ccflags-y += $(CCFLAGS_pfe)
-ccflags-y += $(GLOBAL_CCFLAGS)
-ccflags-y += -Werror
-
-fifo-y := src/fifo.o
-#fifo-y := $(OBJS)
-
-obj-m += fifo.o
-
-linux:
-	make CROSS_COMPILE=$(PLATFORM)-  ARCH=$(ARCH) -C $(KERNELDIR) M=`pwd` GLOBAL_CCFLAGS="$(GLOBAL_CCFLAGS)" modules
-
-linux-clean:
-	make CROSS_COMPILE=$(PLATFORM)-  ARCH=$(ARCH) -C $(KERNELDIR) M=`pwd` clean
-
+include $(M)/../dummy_mod.mak
