pfeng: fix parallel build
Issue: AAVB-7589
Signed-off-by: Jan Petrous <jan.petrous@nxp.com>

--- a/sw/linux-pfeng/Makefile
+++ b/sw/linux-pfeng/Makefile
@@ -91,7 +91,7 @@ libfci-clean:
 
 drv-build:
 	for dir in $(OBJ_DIRS); do (cd $$dir; $(MAKE) $(PLAT_DEFINES) linux || exit 1) || exit 1; done
-	make $(PLAT_DEFINES) -C $(KERNELDIR) M=`pwd` GLOBAL_CCFLAGS="$(GLOBAL_CCFLAGS)" modules
+	$(MAKE) $(PLAT_DEFINES) -C $(KERNELDIR) M=`pwd` GLOBAL_CCFLAGS="$(GLOBAL_CCFLAGS)" modules
 
 drv-clean:
 	for dir in $(OBJ_DIRS); do (cd $$dir; $(MAKE) $(PLAT_DEFINES) linux-clean || exit 1) || exit 1; done
