--- a/doc/nxp,s32g-pfe.yaml
+++ b/doc/nxp,s32g-pfe.yaml
@@ -157,6 +157,19 @@ properties:
         - PFE_PHYIF_HIF_3
         - PFE_PHYIF_HIF_NOCPY
 
+  nvmem-cells:
+    minItems: 4
+    description:
+      Reference to the NVMEM nodes used for accessing GPRs for PFE
+      configuration.
+
+  nvmem-cell-names:
+    items:
+      - const: "pfe_emacs_intf_sel"
+      - const: "pfe_coh_en"
+      - const: "pfe_pwr_ctrl"
+      - const: "pfe_genctrl3"
+
   phys:
     maxItems: 3
 
