pfeng: Add support for using NVMEM cells to access GPRs
Instead of accessing the S32G GPRs memory zone within the PFE
Linux driver, now we can also rely on NVMEM cells to provide
access to the wanted registers.

The NVMEM cells are provided by either the "s32cc-gpr-nvmem"
driver, or the "s32cc-scmi-nvmem" driver. The change is
transparently done at build time from the devicetree, through
the phandles that point to each cell.

The usage of NVMEM is enabled through the PFE_CFG_USE_NVMEM=1
flag.

Issue: AAVB-4948
Signed-off-by: Andrei Cherechesu <andrei.cherechesu@nxp.com>

--- a/sw/linux-pfeng/Makefile
+++ b/sw/linux-pfeng/Makefile
@@ -68,7 +68,7 @@ ifneq ($(PFE_CFG_FCI_ENABLE),0)
 pfeng-objs-libs += ../fci/fci.o
 endif
 
-pfeng-objs-core := pfeng-debugfs.o pfeng-hif.o pfeng-bman.o pfeng-netif.o pfeng-ethtool.o pfeng-hwts.o pfeng-dt.o pfeng-mdio.o pfeng-ptp.o
+pfeng-objs-core := pfeng-debugfs.o pfeng-hif.o pfeng-bman.o pfeng-netif.o pfeng-ethtool.o pfeng-hwts.o pfeng-dt.o pfeng-mdio.o pfeng-ptp.o pfeng-gpr.o
 
 ifneq ($(PFE_CFG_PFE_MASTER),0)
 pfeng-objs := $(pfeng-objs-core) $(pfeng-objs-libs) pfeng-drv.o pfeng-fw.o pfeng-phylink.o
